--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,5 +1,6 @@
 <div class="card main-card-margin">
   <h3 class="card-header text-white bg-primary">
+    <img src="../../assets/img/pokebola.png" style="width: 40px; height: 40px;">
     Escriba un Pokemon...
   </h3>
 
