--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,34 +1,98 @@
 <div class="card main-card-margin">
   <h3 class="card-header text-white bg-primary">
     <img src="../../assets/img/pokebola.png" style="width: 40px; height: 40px;">
-    Escriba un Pokemon...
+    Busca un Pokémon...
   </h3>
 
   <div class="card-body">
-    <div class="input-group mb-3 search-input-padding">
-      <input type="text"
-             class="form-control"
-             placeholder="Pokemon..."
-             aria-label="Username"
-             aria-describedby="basic-addon1"
-             [(ngModel)]="inputSearch">
-      <button class="btn btn-outline-success"
-              type="button"
-              id="button-addon2"
-              (click)="btnSearchClick()">
-        <i class="fas fa-search fa-fw"></i> Buscar
-      </button>
+    <div class="row">
+      <div class="col-12">
+        <div class="input-group mb-3 search-input-padding">
+          <input type="text"
+                 class="form-control"
+                 placeholder="Pokemon..."
+                 aria-label="Username"
+                 aria-describedby="basic-addon1"
+                 [disabled]="isLoading"
+                 (keypress)="isEnter($event)"
+                 [(ngModel)]="inputSearch">
+          <button class="btn btn-outline-success"
+                  type="button"
+                  id="button-addon2"
+                  [disabled]="isLoading"
+                  (click)="btnSearchClick()">
+            <i class="fas fa-search fa-fw"></i> Buscar
+          </button>
+        </div>
+      </div>
     </div>
 
-    <div class="alert alert-primary alert-primary-margin"
-         role="alert">
-      <h4 class="alert-heading text-center">
-        <i class="fas fa-info-circle 2x fa-fw"></i>
-        Informacion!
-      </h4>
-      <p class="text-center">
-        Escriba un pokemon, pulse <b>enter</b> o el boton <b>buscar</b>
-      </p>
+    <div *ngIf="isLoading" class="row">
+      <div class="col-12 text-center">
+        <i class="fas fa-spinner fa-4x fa-spin"></i>
+        <h5>Favor Espere...</h5>
+      </div>
+    </div>
+    
+    <div *ngIf="!isLoading && pokes.length" class="row">
+      <div class="col-12">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">Nombre</th>
+              <th scope="col">Experiencia</th>
+              <th scope="col">Altura</th>
+              <th scope="col">Peso</th>
+              <th scope="col">Predeterminado</th>
+              <th scope="col">Orden</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let poke of pokes">
+              <td>{{ poke.name }}</td>
+              <td>{{ poke.base_experience }}</td>
+              <td>{{ poke.height }}</td>
+              <td>{{ poke.weight }}</td>
+              <td>{{ poke.is_default }}</td>
+              <td>{{ poke.order }}</td>
+              <td>
+                <button class="btn btn-info btn-sm">
+                  <i class="fas fa-eye"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <div *ngIf="!isLoading && !pokes.length" class="row">
+      <div *ngIf="!errorInfo" class="col-12">
+        <div class="alert alert-primary alert-margin"
+             role="alert">
+          <h4 class="alert-heading text-center">
+            <i class="fas fa-info-circle fa-fw"></i>
+            Informacion!
+          </h4>
+          <p class="text-center">
+            Escriba un pokemon, pulse <b>enter</b> o el boton <b>buscar</b>
+          </p>
+        </div>
+      </div>
+
+      <div *ngIf="errorInfo" class="col-12">
+        <div class="alert alert-danger alert-margin"
+              role="alert">
+          <h4 class="alert-heading text-center">
+            <i class="fas fa-exclamation-triangle fa-fw"></i>
+            Error!
+          </h4>
+          <p *ngFor="let message of errorMessages" class="text-center">
+            {{ message }}
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
