--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,6 +1,6 @@
 <div class="card main-card-margin">
   <h3 class="card-header text-white bg-primary">
-    <img src="../../assets/img/pokebola.png" style="width: 40px; height: 40px;">
+    <img src="../../assets/img/pokebola.png" width="40" height="40">
     Busca un Pokémon...
   </h3>
 
@@ -57,9 +57,8 @@
               <td>{{ poke.is_default }}</td>
               <td>{{ poke.order }}</td>
               <td>
-                <button class="btn btn-info btn-sm">
-                  <i class="fas fa-eye"></i>
-                </button>
+                <app-detail-madal [poke]="poke">
+                </app-detail-madal>
               </td>
             </tr>
           </tbody>
