--- a/src/app/detail-madal/detail-madal.component.html
+++ b/src/app/detail-madal/detail-madal.component.html
@@ -25,7 +25,7 @@
       </div>
       <div class="col-4 text-center">
         <button class="btn btn-link"
-                (click)="closeModal()">
+                (click)="downloadDetail()">
           <i class="fas fa-download fa-fw"></i>
           Descargar Detalle
         </button>
